--- a/UnitTestProject1/packages.config
+++ b/UnitTestProject1/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="NUnit" version="3.5.0" targetFramework="net452" />
   <package id="NUnit3TestAdapter" version="3.5.1" targetFramework="net452" />
+  <package id="PhantomJS" version="2.1.1" targetFramework="net452" />
   <package id="Selenium.Support" version="3.0.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.0.0" targetFramework="net452" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.25.0.0" targetFramework="net452" />
   <package id="Selenium.WebDriver.IEDriver" version="3.0.0.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.PhantomJS" version="1.0.0.0" targetFramework="net452" />
 </packages>
