Adding assert all

--- a/UnitTestProject1/UnitTestProject1.csproj
+++ b/UnitTestProject1/UnitTestProject1.csproj
@@ -69,6 +69,7 @@
     <Compile Include="pages\VehiclePage.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="utilities\AssertAll.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
